# cylon-regenesis

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
adrs/: ADR-0001-scope-and-non-goals.md  ADR-0002-flintlock-replacement-not-fork.md  ADR-0003-ipxe-via-dcops-not-tinkerbell.md  ADR-0004-repo-boundaries.md  ADR-0005-dev-multipass-to-bare-metal.md  ADR-0006-planning-baseline-code-audit.md  README.md
config/: regenesis-base.env
crates/multipass-controller/: Cargo.toml
crates/multipass-controller/src/: cloud_init.rs  crd.rs  hub.rs  lib.rs  main.rs  multipass.rs
crates/multipass-controller/src/reconciler/: drift.rs  mod.rs  utils.rs
docs/: ARCHITECTURE.md  PRD.md  README.md  REPO-MAP.md
docs/control-plane/: README.md  api-v2-and-proxy.md  fault-tolerance.md  observability.md  raft-consensus.md  scheduling-and-bidding.md  storage-and-gc.md
docs/host-regenesis/: README.md  cloud-init-parity.md  dcops-integration.md  first-boot-sequence.md  ipxe-provisioning.md
docs/phases/: README.md  phase-0-docs-and-contracts.md  phase-1-multipass-parity.md  phase-2-dcops-ipxe-dev.md  phase-3-control-plane-extraction.md  phase-4-fault-tolerance.md  phase-5-production-bare-metal.md
docs/plan/: 01-vision-and-principles.md  02-gap-analysis-current-state.md  03-data-model.md  04-api-contract.md  05-state-machines.md  06-regenesis-agent-spec.md  07-ipxe-dcops-spec.md  (+9 more)
ipxe/: cylon-resurrection.ipxe
scripts/: provision-node.sh  regenesis-agent
systemd/: cylon-host.service  regenesis-agent.service
(+2 files in other folders)
