[package]
name = "multipass-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "2.0.0", features = ["runtime", "derive", "client", "rustls-tls"], default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
kube-runtime = "2.0"
k8s-openapi = { version = "0.26", default-features = false, features = ["v1_30"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
schemars = { version = "1", features = ["chrono04"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
sha2 = "0.10"

[lints]
workspace = true
